fixed topbar positioning changed the html/css of topbar so that the rest of the page the component is on would expand/contract if positioning changed. fixed on mobile and desktop need to make sure positioning is all set, bleed through from previous pages are showing if there is no new content in front of where the old content was maybe mark you can debug that a little

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -186,6 +186,15 @@ ion-icon {
     }
 }
 
+// @media screen and (max-width: 1024px){
+//
+// }
+
+ion-content {
+  // margin-top: 100px;
+  position: static !important;
+}
+
 @media screen and (min-width: 420px) and (max-width: 800px){
   .mobile-nav-pop .popover-content {
       // width: 100% !important;
