--- a/src/pages/faqs/faqs.scss
+++ b/src/pages/faqs/faqs.scss
@@ -1,7 +1,7 @@
 page-faqs {
 
   ion-content {
-    margin-top: 130px;
+    // margin-top: 130px;
   }
   @media screen and (max-width: 1024px){
     .desktop {
