--- a/src/pages/navigate/navigate.scss
+++ b/src/pages/navigate/navigate.scss
@@ -1,7 +1,7 @@
 page-navigate {
 
     .wrapper {
-        margin-top: 120px;
+        // margin-top: 120px;
     }
     .toolbar-class{
         header{
