--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -7,7 +7,7 @@ page-settings {
 
   .wrapper {
       width: 100%;
-      margin-top: 100px;
+      // margin-top: 100px;
       padding: 30px;
       // margin-left: 30px;
   }
