--- a/src/pages/user-dashboard/user-dashboard.scss
+++ b/src/pages/user-dashboard/user-dashboard.scss
@@ -6,7 +6,7 @@ page-user-dashboard {
     background-color: black;
     // margin-top: 100px;
     // padding: 20px 20px 5px 20px;
-    margin: 83px auto 0 auto;
+    margin: 0 auto;
     display: flex;
     position: relative;
     min-height: 100px;
@@ -83,7 +83,7 @@ page-user-dashboard {
   .assessment-boxes {
     width: 98%;
     position: absolute;
-    top: 250px;
+    top: 200px;
     left: 40px;
     vertical-align: top;
 
@@ -194,7 +194,8 @@ page-user-dashboard {
   @media screen and (max-width: 1024px){
 
     ion-content {
-      margin-top: 100px;
+      // margin-top: 100px;
+      position: static !important;
     }
 
     .desktop {
